@@ -34,8 +34,6 @@
 
 #include <type_traits>
 #include <utility>
-#include <string>
-#include <vector>
 
 namespace arangodb {
 namespace consensus {
@@ -50,7 +48,9 @@ enum Operation {
   PREPEND,
   SHIFT,
   OBSERVE,
-  UNOBSERVE
+  UNOBSERVE,
+  ERASE,
+  REPLACE
 };
 
 using namespace arangodb::velocypack;
@@ -74,219 +74,168 @@ class Store;
 
 /// @brief Simple tree implementation
 class Node {
-
-public:
-
-
+ public:
   // @brief Slash-segmented path
   typedef std::vector<std::string> PathType;
-
 
   // @brief Child nodes
   typedef std::map<std::string, std::shared_ptr<Node>> Children;
 
-
   /// @brief Construct with name
   explicit Node(std::string const& name);
-
 
   /// @brief Copy constructor
   Node(Node const& other);
 
-
   /// @brief Move constructor
   Node(Node&& other);
-
 
   /// @brief Construct with name and introduce to tree under parent
   Node(std::string const& name, Node* parent);
 
-
   /// @brief Construct with name and introduce to tree under parent
   Node(std::string const& name, Store* store);
-
 
   /// @brief Default dtor
   virtual ~Node();
 
-
   /// @brief Get name
   std::string const& name() const;
-
 
   /// @brief Get full path
   std::string uri() const;
 
-
   /// @brief Assignment operator
   Node& operator=(Node const& node);
-
 
   /// @brief Move operator
   Node& operator=(Node&& node);
 
-
   /// @brief Apply value slice to this node
   Node& operator=(arangodb::velocypack::Slice const&);
-
 
   /// @brief Check equality with slice
   bool operator==(arangodb::velocypack::Slice const&) const;
 
-
   /// @brief Check equality with slice
   bool operator!=(arangodb::velocypack::Slice const&) const;
-
 
   /// @brief Type of this node (LEAF / NODE)
   NodeType type() const;
 
-  
   /// @brief Get node specified by path vector
   Node& operator()(std::vector<std::string> const& pv);
-
 
   /// @brief Get node specified by path vector
   Node const& operator()(std::vector<std::string> const& pv) const;
 
-  
   /// @brief Get node specified by path string
   Node& operator()(std::string const& path);
 
-  
   /// @brief Get node specified by path string
   Node const& operator()(std::string const& path) const;
-  
 
   /// @brief Remove child by name
   bool removeChild(std::string const& key);
 
-  
   /// @brief Remove this node and below from tree
   bool remove();
 
-  
   /// @brief Get root node
   Node const& root() const;
 
-  
   /// @brief Get root node
   Node& root();
 
-  
   /// @brief Dump to ostream
   std::ostream& print(std::ostream&) const;
 
-  
   /// #brief Get path of this node
   std::string path();
 
-  
   /// @brief Apply single operation as defined by "op"
   bool applieOp(arangodb::velocypack::Slice const&);
 
-  
   /// @brief Apply single slice
   bool applies(arangodb::velocypack::Slice const&);
 
-  
   /// @brief handle "op" keys in write json
   template <Operation Oper>
   bool handle(arangodb::velocypack::Slice const&);
 
-  
   /// @brief Create Builder representing this store
-  void toBuilder(Builder&) const;
+  void toBuilder(Builder&, bool showHidden = false) const;
 
-  
   /// @brief Access children
   Children& children();
 
-  
   /// @brief Access children
   Children const& children() const;
 
-  
   /// @brief Create slice from value
   Slice slice() const;
 
-  
   /// @brief Get value type
   ValueType valueType() const;
 
-  
   /// @brief Add observer for this node
   bool addObserver(std::string const&);
 
-  
   /// @brief Add observer for this node
   void notifyObservers(std::string const& origin) const;
 
-  
   /// @brief Is this node being observed by url
   bool observedBy(std::string const& url) const;
 
-  
   /// @brief Get our container
   Store& store();
 
-  
   /// @brief Get our container
   Store const& store() const;
 
-  
   /// @brief Create JSON representation of this node and below
   std::string toJson() const;
 
-  
   /// @brief Parent node
   Node const* parent() const;
 
-  
   /// @brief Part of relative path vector which exists
   std::vector<std::string> exists(std::vector<std::string> const&) const;
-  
 
   /// @brief Part of relative path which exists
   std::vector<std::string> exists(std::string const&) const;
 
-  
   /// @brief Get integer value (throws if type NODE or if conversion fails)
   int getInt() const;
 
-  
   /// @brief Get insigned value (throws if type NODE or if conversion fails)
   uint64_t getUInt() const;
 
-  
+  /// @brief Get bool value (throws if type NODE or if conversion fails)
+  bool getBool() const;
+
   /// @brief Get double value (throws if type NODE or if conversion fails)
   double getDouble() const;
 
-  
   /// @brief Get string value (throws if type NODE or if conversion fails)
   std::string getString() const;
 
-  
  protected:
-
-  
   /// @brief Add time to live entry
   virtual bool addTimeToLive(long millis);
 
-  
   /// @brief Remove time to live entry
   virtual bool removeTimeToLive();
 
   void rebuildVecBuf() const;
 
-  
-  std::string _node_name; ///< @brief my name 
-  Node* _parent;          ///< @brief parent 
-  Store* _store;          ///< @brief Store 
-  Children _children;     ///< @brief child nodes 
-  TimePoint _ttl;         ///< @brief my expiry 
-  //Buffer<uint8_t> _value; ///< @brief my value
-  std::vector<Buffer<uint8_t>> _value; ///< @brief my value
+  std::string _node_name;  ///< @brief my name
+  Node* _parent;           ///< @brief parent
+  Store* _store;           ///< @brief Store
+  Children _children;      ///< @brief child nodes
+  TimePoint _ttl;          ///< @brief my expiry
+  // Buffer<uint8_t> _value; ///< @brief my value
+  std::vector<Buffer<uint8_t>> _value;  ///< @brief my value
   mutable Buffer<uint8_t> _vecBuf;
   mutable bool _vecBufDirty;
   bool _isArray;
